[package]
name = "make_ultra"
version = "0.1.0"
authors = ["CoolOppo <CoolOppo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_regex = "0.3"
toml = "0.4"
ignore = "0.4"
regex = "1"
rayon = "1"
maplit = "1.0.1"
petgraph = "0.4.13"
parking_lot = {version = "0.7.1", features = ["nightly"]}
lazy_static = "*"
[profile.release]
lto = 'thin'
panic = 'abort'
