[package]
name = "make_ultra"
version = "0.1.0"
authors = ["CoolOppo <CoolOppo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.2"
cached = "0.8.0"
clap = "2.32.0"
crossbeam = "0.7.1"
hashbrown = {version = "0.1.8", features = ["serde", "nightly"]}
ignore = "0.4.6"
lazy_static = "1.2.0"
maplit = "1.0.1"
parking_lot = {version = "0.7.1", features = ["nightly"]}
petgraph = "0.4.13"
rayon = "1.0.3"
regex = "1.1.0"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_regex = "0.3.1"
snap = "0.2"
toml = "0.4.10"

[profile.release]
lto = 'thin'
panic = 'abort'
